--- a/Plan/20170704.md
+++ b/Plan/20170704.md
@@ -6,4 +6,47 @@
 <th>姓名</th>
 <th>计划</th>
 </tr>
+<tr>
+<td>冯可</td>
+<td>组织成员优化注册模块的需求分析、完成模型设计</td>
+</tr>
+<tr>
+<td>江佳俊</td>
+<td>上传原型</td>
+</tr>
+<tr>
+<td>王宇坤</td>
+<td>原型css设计</td>
+</tr>
+<tr>
+<td>杨欣睿</td>
+<td>修改注册模块的需求分析</td>
+</tr>
 <table>
+
+
+明日计划：
+<table>
+<tr>
+<th>姓名</th>
+<th>计划</th>
+</tr>
+<tr>
+<td>冯可</td>
+<td>×××</td>
+</tr>
+<tr>
+<td>江佳俊</td>
+<td>×××</td>
+</tr>
+<tr>
+<td>王宇坤</td>
+<td>×××</td>
+</tr>
+<tr>
+<td>杨欣睿</td>
+<td>×××</td>
+</tr>
+<table>
+
+
