--- a/Plan/20170704.md
+++ b/Plan/20170704.md
@@ -1,52 +1,23 @@
 ## 2017年7月4日
 
-今日计划：
-<table>
-<tr>
-<th>姓名</th>
-<th>计划</th>
-</tr>
-<tr>
-<td>冯可</td>
-<td>组织成员优化注册模块的需求分析、完成模型设计</td>
-</tr>
-<tr>
-<td>江佳俊</td>
-<td>上传原型</td>
-</tr>
-<tr>
-<td>王宇坤</td>
-<td>原型css设计</td>
-</tr>
-<tr>
-<td>杨欣睿</td>
-<td>修改注册模块的需求分析</td>
-</tr>
-<table>
+上午计划：
+
+姓名 | 计划 | 完成情况
+----|------|----
+冯可 | 组织成员优化注册模块的需求分析、完成模型设计  | 100%
+江佳俊 | 上传原型 | 100%
+王宇坤 | 原型css设计修改注册模块的需求分析 | 100%
+杨欣睿 | 修改注册模块的需求分析 | 100%
 
 
-明日计划：
-<table>
-<tr>
-<th>姓名</th>
-<th>计划</th>
-</tr>
-<tr>
-<td>冯可</td>
-<td>×××</td>
-</tr>
-<tr>
-<td>江佳俊</td>
-<td>×××</td>
-</tr>
-<tr>
-<td>王宇坤</td>
-<td>×××</td>
-</tr>
-<tr>
-<td>杨欣睿</td>
-<td>×××</td>
-</tr>
-<table>
+下午计划：
+
+姓名 | 计划 | 完成情况
+----|------|----
+冯可  |  学习markdown语法，规范撰写各类文件 | ---
+江佳俊 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
+王宇坤 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
+杨欣睿 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
+
 
 
