--- a/Plan/20170704.md
+++ b/Plan/20170704.md
@@ -15,10 +15,10 @@
 
 姓名 | 计划 | 完成情况
 ----|------|----
-冯可  |  学习markdown语法，规范撰写各类文件 | ---
-江佳俊 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
-王宇坤 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
-杨欣睿 | 修改原型，进一步完善原型中登录模块的客户端验证 | ---
+冯可  |  学习markdown语法，规范撰写各类文件 | 100%
+江佳俊 | 修改原型，进一步完善原型中登录模块的客户端验证 | 80%
+王宇坤 | 修改原型，进一步完善原型中登录模块的客户端验证 | 50%
+杨欣睿 | 修改原型，进一步完善原型中登录模块的客户端验证 | 50%
 
 
 
