--- a/Plan/20170705.md
+++ b/Plan/20170705.md
@@ -4,10 +4,10 @@
 
 姓名 | 计划 | 完成情况
 ----|------|----
-冯可 |  | -----
-江佳俊 | 上传原型 | -----
-王宇坤 | 原型css设计修改注册模块的需求分析 | -----
-杨欣睿 | 修改注册模块的需求分析 | -----
+冯可 |  完善模型的注册模块 | -----
+江佳俊 | 完善原型的登录模块 | -----
+王宇坤 | 完善模型的注册模块 | -----
+杨欣睿 | 完善模型的登录模块 | -----
 
 <br/>
 
@@ -15,7 +15,7 @@
 
 姓名 | 计划 | 完成情况
 ----|------|----
-冯可  |  学习markdown语法，规范撰写各类文件 | -----
-江佳俊 | 修改原型，进一步完善原型中登录模块的客户端验证 | ----
-王宇坤 | 修改原型，进一步完善原型中登录模块的客户端验证 | ----
-杨欣睿 | 修改原型，进一步完善原型中登录模块的客户端验证 | ----
+冯可  |  搭建登录模块后台代码 | -----
+江佳俊 |  搭建注册模块后台代码| ----
+王宇坤 |  搭建注册登录后台代码| ----
+杨欣睿 |  搭建注册模块后台代码| ----
