--- a/Plan/20170705.md
+++ b/Plan/20170705.md
@@ -17,5 +17,5 @@
 ----|------|----
 冯可  |  搭建登录模块后台代码 | -----
 江佳俊 |  搭建注册模块后台代码| ----
-王宇坤 |  搭建注册登录后台代码| ----
+王宇坤 |  搭建登录模块后台代码| ----
 杨欣睿 |  搭建注册模块后台代码| ----
