--- a/demo/doc/Plan/20170705.md
+++ b/demo/doc/Plan/20170705.md
@@ -4,10 +4,10 @@
 
 姓名 | 计划 | 完成情况
 ----|------|----
-冯可 |  完善模型的注册模块 | -----
-江佳俊 | 完善原型的登录模块 | -----
-王宇坤 | 完善模型的注册模块 | -----
-杨欣睿 | 完善模型的登录模块 | -----
+冯可 |  完善模型的注册模块 | 90%
+江佳俊 | 完善原型的登录模块 | 100%
+王宇坤 | 完善模型的注册模块 | 100%
+杨欣睿 | 完善模型的登录模块 | 100%
 
 <br/>
 
